<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center"
        android:orientation="vertical"

    tools:context="by.avpa.kuchinsky.vape_self_dressing.ReadyRec.BadDrip.BadDrip_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp"
            android:weightSum="10"


            >
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:layout_weight="1"

                ></RelativeLayout>

            <GridLayout
                android:id="@+id/bdGrid"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"

                android:layout_width="match_parent"
                android:layout_height="750dp"
                android:layout_weight="9"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:padding="2dp"
                android:rowCount="5"

                >

                <android.support.v7.widget.CardView

                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"


                    >

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical"
                        android:padding="0dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="0dp"
                            android:padding="0dp"
                            android:src="@drawable/bd1" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="2"
                    android:layout_rowWeight="1"

                    >


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"

                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:paddingLeft="2dp"
                            android:text="@string/cereal_trip"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:padding="0dp"




                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:src="@drawable/bd2" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"

                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"

                    android:layout_marginRight="0dp"
                    android:layout_rowWeight="1">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"

                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:text="@string/ugly_butter"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView

                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"

                    android:padding="2dp"


                    >

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical"
                        android:padding="0dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="0dp"
                            android:padding="0dp"
                            android:src="@drawable/bd3" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_rowWeight="1"

                    >


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"

                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/bad_blood_bad_drip"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"

                    android:padding="0dp"


                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:src="@drawable/bd4" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_rowWeight="1">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"

                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cereal_killer"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"

                    android:padding="0dp"


                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:src="@drawable/bd5" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_rowWeight="1">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"

                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/bad_drip_farley"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </GridLayout>


        </LinearLayout>


    </ScrollView>
